--- a/app/src/main/res/layout/activity_modify_pass.xml
+++ b/app/src/main/res/layout/activity_modify_pass.xml
@@ -5,7 +5,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-
+    <include layout="@layout/view_toolbar"/>
 
     <LinearLayout
 
