--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -92,10 +92,15 @@
         android:onClick="loginByAccount"
         android:text="账号密码登陆" />
 
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <com.amap.api.maps.MapView
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </FrameLayout>
 
 </LinearLayout>
