图片选择器

--- a/app/src/main/res/layout/activity_idcard.xml
+++ b/app/src/main/res/layout/activity_idcard.xml
@@ -57,6 +57,7 @@
                     android:background="@color/line" />
 
                 <ImageView
+                    android:id="@+id/image1"
                     android:layout_width="match_parent"
                     android:layout_height="220dp"
                     android:layout_marginLeft="20dp"
@@ -65,6 +66,7 @@
                     android:background="@color/background" />
 
                 <ImageView
+                    android:id="@+id/image2"
                     android:layout_width="match_parent"
                     android:layout_height="220dp"
                     android:layout_marginLeft="20dp"
