--- a/app/src/main/res/layout/fragment_index.xml
+++ b/app/src/main/res/layout/fragment_index.xml
@@ -80,6 +80,7 @@
         android:gravity="center">
 
         <LinearLayout
+            android:id="@+id/of"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:background="@drawable/oval_on"
