--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context="com.sypm.shuyuzhongbao.MapActivity">
 
-    <include layout="@layout/view_toolbar" />
+    <!--<include layout="@layout/view_toolbar" />-->
 
     <com.amap.api.maps.MapView
         android:id="@+id/map"
