--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,13 +24,14 @@
             android:orientation="horizontal">
 
             <EditText
+                android:id="@+id/uidEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
                 android:layout_weight="3"
                 android:background="@null"
                 android:gravity="center_vertical"
                 android:hint="请输入手机号    "
+                android:paddingLeft="20dp"
                 android:textSize="17sp" />
 
             <View
@@ -40,12 +41,15 @@
                 android:layout_marginTop="10dp"
                 android:background="@color/orange" />
 
-            <TextView
+            <Button
+                android:id="@+id/button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginRight="10dp"
                 android:layout_weight="2"
+                android:background="@null"
                 android:gravity="center"
+                android:onClick="getPinClick"
                 android:text="获取验证码"
                 android:textColor="@color/orange"
                 android:textSize="17sp" />
@@ -58,12 +62,13 @@
             android:background="@color/line" />
 
         <EditText
+            android:id="@+id/pinEdit"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_marginLeft="20dp"
             android:background="@null"
             android:gravity="center_vertical"
             android:hint="请输入验证码"
+            android:paddingLeft="20dp"
             android:textSize="17sp" />
 
         <View
