--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -23,6 +23,16 @@
             android:paddingLeft="20dp"
             android:text="单号：203523215"
             android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:id="@+id/textView2" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:paddingLeft="20dp"
+            android:text="姓名：亓老板"
+            android:textColor="@android:color/black"
             android:textSize="20sp" />
 
         <TextView
