--- a/app/src/main/res/layout/fragment_money.xml
+++ b/app/src/main/res/layout/fragment_money.xml
@@ -4,11 +4,12 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -41,6 +42,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/textView7"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
@@ -65,6 +67,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:layout_marginTop="20dp">
 
         <TextView
