--- a/app/src/main/res/layout/activity_modify_pass.xml
+++ b/app/src/main/res/layout/activity_modify_pass.xml
@@ -5,7 +5,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <include layout="@layout/view_toolbar"/>
+    <include layout="@layout/view_toolbar" />
 
     <LinearLayout
 
@@ -94,6 +94,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="80dp"
         android:background="@color/orange"
+        android:onClick="loginOnclick"
         android:text="确定"
         android:textColor="@android:color/white"
         android:textSize="18sp" />
