--- a/app/src/main/res/layout/activity_login_by_account.xml
+++ b/app/src/main/res/layout/activity_login_by_account.xml
@@ -48,6 +48,7 @@
             android:background="@null"
             android:gravity="center_vertical"
             android:hint="请输入密码"
+            android:inputType="textPassword"
             android:paddingLeft="20dp"
             android:textSize="17sp" />
 
