--- a/app/src/main/res/layout/activity_update_work_time.xml
+++ b/app/src/main/res/layout/activity_update_work_time.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_add_work_time"
+    android:id="@+id/activity_update_work_time"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.sypm.shuyuzhongbao.AddWorkTimeActivity">
+    tools:context="com.sypm.shuyuzhongbao.UpdateWorkTimeActivity">
 
     <include layout="@layout/view_toolbar" />
 
     <LinearLayout
-        android:id="@+id/up"
+        android:id="@+id/onWork_updateWorkTime"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@android:color/white">
@@ -26,7 +26,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/txt_onWork"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="10"
@@ -53,7 +53,7 @@
         android:background="@color/background" />
 
     <LinearLayout
-        android:id="@+id/down"
+        android:id="@+id/offWork_updateWorkTime"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@android:color/white">
@@ -69,7 +69,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/txt_offWork"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="10"
@@ -96,7 +96,7 @@
         android:background="@color/background" />
 
     <LinearLayout
-        android:id="@+id/week"
+        android:id="@+id/doingWeeks_updateWorkTime"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@android:color/white">
@@ -112,7 +112,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/weeks"
+            android:id="@+id/txt_weeks"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="10"
@@ -147,25 +147,25 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/bt_addtime_delete"
-                android:onClick="onClick"
+                android:id="@+id/bt_updatetime_cancel"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
                 android:background="@android:color/white"
-                android:text="删除"
+                android:onClick="onClick"
+                android:text="取消"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
             <Button
-                android:id="@+id/bt_addtime_commit"
-                android:onClick="onClick"
+                android:id="@+id/bt_updatetime_down"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_gravity="bottom"
                 android:layout_weight="2"
                 android:background="@color/orange"
+                android:onClick="onClick"
                 android:text="确定"
                 android:textColor="@android:color/white"
                 android:textSize="20sp" />
