--- a/app/src/main/res/layout/fragment_index.xml
+++ b/app/src/main/res/layout/fragment_index.xml
@@ -38,6 +38,13 @@
                 android:textSize="24sp" />
         </LinearLayout>
 
+        <!--实现定位-->
+        <com.amap.api.maps.MapView
+            android:id="@+id/mapView"
+            android:layout_width="0dp"
+            android:layout_height="0dp">
+        </com.amap.api.maps.MapView>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
