--- a/app/src/main/res/layout/item_work_time.xml
+++ b/app/src/main/res/layout/item_work_time.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    android:descendantFocusability="blocksDescendants">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -11,6 +12,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/txt_item_worktime"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_weight="3"
@@ -22,6 +24,7 @@
 
 
         <TextView
+            android:id="@+id/txt_item_workday"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_weight="3"
@@ -32,16 +35,15 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center">
 
-        <Switch
-            android:id="@+id/switch1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:paddingRight="20dp"
+        android:textOff="关"
+        android:textOn="开" />
+
 
 </LinearLayout>
