--- a/app/src/main/res/layout/item_pay_list.xml
+++ b/app/src/main/res/layout/item_pay_list.xml
@@ -19,21 +19,25 @@
 
 
         <TextView
+            android:id="@+id/messageHead"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="3"
             android:gravity="left|center_vertical"
+            android:singleLine="true"
             android:text="支付消息"
-            android:textSize="20sp" />
+            android:textSize="14sp" />
 
 
         <TextView
+            android:id="@+id/time"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="3"
             android:gravity="center_vertical|right"
+            android:singleLine="true"
             android:text="10/15 18:00"
-            android:textSize="18sp" />
+            android:textSize="14sp" />
 
 
         <ImageView
@@ -57,14 +61,14 @@
             android:layout_weight="1" />
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/content"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginRight="10dp"
             android:layout_weight="7"
             android:lines="2"
             android:text="支付消息支付消息支付消息支付消息支付消息支付消息支付消息支付消息支付消息支付消息支付消息支付消息"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
     </LinearLayout>
 </LinearLayout>
