--- a/app/src/main/res/layout/fragment_money.xml
+++ b/app/src/main/res/layout/fragment_money.xml
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/today"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
@@ -53,6 +53,7 @@
                 android:textSize="24sp" />
 
             <TextView
+                android:id="@+id/total"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
