--- a/app/src/main/res/layout/item_order_list.xml
+++ b/app/src/main/res/layout/item_order_list.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/createTime"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1.5"
@@ -22,6 +23,7 @@
             android:layout_height="match_parent" />
 
         <TextView
+            android:id="@+id/shipSn"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
@@ -35,7 +37,7 @@
             android:layout_height="match_parent" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/status"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
@@ -49,7 +51,7 @@
             android:layout_height="match_parent" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/fee"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
