--- a/app/src/main/res/layout/item_order_list.xml
+++ b/app/src/main/res/layout/item_order_list.xml
@@ -6,17 +6,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@android:color/white">
 
         <TextView
             android:id="@+id/createTime"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_weight="1.5"
-            android:background="@android:color/white"
+            android:layout_weight="2"
             android:gravity="center"
             android:text="2016.10.20"
-            android:textSize="18sp" />
+            android:textSize="12sp" />
 
         <View
             android:layout_width="0.1dp"
@@ -26,11 +26,10 @@
             android:id="@+id/shipSn"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_weight="1"
-            android:background="@android:color/white"
+            android:layout_weight="2"
             android:gravity="center"
             android:text="203216"
-            android:textSize="18sp" />
+            android:textSize="12sp" />
 
         <View
             android:layout_width="0.1dp"
@@ -41,7 +40,6 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:background="@android:color/white"
             android:gravity="center"
             android:text="已完成"
             android:textSize="18sp" />
@@ -55,7 +53,6 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:background="@android:color/white"
             android:gravity="center"
             android:text="5元"
             android:textColor="@android:color/holo_red_light"
