--- a/app/src/main/res/layout/fragment_money.xml
+++ b/app/src/main/res/layout/fragment_money.xml
@@ -48,7 +48,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_order_left2"
                 android:gravity="center"
-                android:text="25元"
+                android:text="0元"
                 android:textColor="@android:color/holo_red_light"
                 android:textSize="24sp" />
 
@@ -59,7 +59,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_order_right2"
                 android:gravity="center"
-                android:text="3000元"
+                android:text="0元"
                 android:textColor="@android:color/holo_red_light"
                 android:textSize="24sp" />
         </LinearLayout>
@@ -68,13 +68,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginTop="20dp">
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_weight="1.5"
+            android:layout_weight="2"
             android:background="@color/orange"
             android:gravity="center"
             android:text="时间"
@@ -88,7 +89,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:background="@color/orange"
             android:gravity="center"
             android:text="单号"
@@ -129,6 +130,6 @@
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="6dp" />
+        android:padding="10dp" />
 
 </LinearLayout>
