--- a/app/src/main/res/layout/item_pay_list.xml
+++ b/app/src/main/res/layout/item_pay_list.xml
@@ -25,7 +25,7 @@
             android:layout_weight="3"
             android:gravity="left|center_vertical"
             android:singleLine="true"
-            android:text="支付消息"
+            android:text=""
             android:textSize="14sp" />
 
 
@@ -35,8 +35,9 @@
             android:layout_height="50dp"
             android:layout_weight="3"
             android:gravity="center_vertical|right"
+            android:paddingRight="10dp"
             android:singleLine="true"
-            android:text="10/15 18:00"
+            android:text=""
             android:textSize="14sp" />
 
 
@@ -46,7 +47,8 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:gravity="center"
-            android:src="@drawable/delete" />
+            android:src="@drawable/delete"
+            android:visibility="gone" />
     </LinearLayout>
 
     <LinearLayout
@@ -67,7 +69,7 @@
             android:layout_marginRight="10dp"
             android:layout_weight="7"
             android:lines="2"
-            android:text="支付消息支付消息支付消息支付消息支付消息支付消息支付消息支付消息支付消息支付消息支付消息支付消息"
+            android:text=""
             android:textSize="16sp" />
 
     </LinearLayout>
