--- a/app/src/main/res/layout/activity_dialog.xml
+++ b/app/src/main/res/layout/activity_dialog.xml
@@ -12,39 +12,43 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/shipSn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:text="单号：1212134324234234"
+            android:text="单号："
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
         <TextView
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:text="姓名：亓老板"
+            android:text="姓名："
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
         <TextView
+            android:id="@+id/phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:text="电话：13699397787"
+            android:text="电话："
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
         <TextView
+            android:id="@+id/address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
-            android:text="地址：山东省济南市历城区山大北路56号，漱玉平民大药房"
+            android:text="地址："
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
@@ -63,7 +67,7 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/of"
+                android:id="@+id/accept"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginTop="10dp"
@@ -85,6 +89,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/timer"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -92,11 +97,12 @@
                     android:layout_marginTop="20dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="倒计时：56"
+                    android:text="倒计时："
                     android:textColor="@android:color/darker_gray"
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/reject"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
