--- a/app/src/main/res/layout/activity_personal.xml
+++ b/app/src/main/res/layout/activity_personal.xml
@@ -28,7 +28,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/userName"
+            android:id="@+id/txt_name_userinfo"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="10"
@@ -52,82 +52,6 @@
         android:layout_marginRight="10dp"
         android:background="@color/line" />
 
-
-    <LinearLayout
-        android:id="@+id/personCode"
-        android:layout_width="match_parent"
-        android:layout_height="66dp"
-        android:background="@android:color/white">
-
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_weight="10"
-            android:gravity="center_vertical"
-            android:text="人员编码"
-            android:textColor="@android:color/black"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/number"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="10"
-            android:gravity="right|center_vertical"
-            android:text=""
-            android:textSize="16sp" />
-
-        <ImageView
-            android:layout_width="16dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:src="@drawable/right" />
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@color/line" />
-
-    <LinearLayout
-        android:id="@+id/storeAddress"
-        android:layout_width="match_parent"
-        android:layout_height="66dp"
-        android:background="@android:color/white">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_weight="10"
-            android:gravity="center_vertical"
-            android:text="所在门店"
-            android:textColor="@android:color/black"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/store"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="10"
-            android:gravity="right|center_vertical"
-            android:text=""
-            android:textSize="16sp" />
-
-        <ImageView
-            android:layout_width="16dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:src="@drawable/right" />
-
-    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
@@ -155,7 +79,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/IDCardNumber"
+            android:id="@+id/txt_idCard_userinfo"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="10"
