--- a/app/src/main/res/layout/activity_work_time.xml
+++ b/app/src/main/res/layout/activity_work_time.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_work_time"
     android:layout_width="match_parent"
@@ -11,34 +11,23 @@
     <include layout="@layout/view_toolbar" />
 
     <!--item_work_time-->
-
     <ListView
         android:id="@+id/listView_worktime"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:scrollbars="none">
+        android:scrollbars="none"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp">
 
     </ListView>
 
-    <LinearLayout
-        android:id="@+id/add"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center">
 
-        <LinearLayout
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:background="@drawable/oval_on"
-            android:gravity="center">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="添加"
-                android:textColor="@android:color/white"
-                android:textSize="20sp" />
-        </LinearLayout>
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/img_worktime_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/addtime"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="60dp"/>
 
-</LinearLayout>
+</FrameLayout>
