--- a/app/src/main/res/layout/fragment_money.xml
+++ b/app/src/main/res/layout/fragment_money.xml
@@ -7,6 +7,7 @@
     android:padding="0dp">
 
     <LinearLayout
+        android:id="@+id/refresh2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -66,6 +67,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/refresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -130,6 +132,7 @@
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@null"
         android:padding="10dp" />
 
 </LinearLayout>
