--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -150,6 +150,7 @@
         android:background="@color/line" />
 
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/feedback"
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -181,6 +182,7 @@
     </LinearLayout>
 
     <View
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_marginLeft="10dp"
