--- a/app/src/main/res/layout/item_work_time.xml
+++ b/app/src/main/res/layout/item_work_time.xml
@@ -1,49 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:background="@android:color/white"
-    android:descendantFocusability="blocksDescendants">
+    android:descendantFocusability="blocksDescendants"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/txt_num_worktime"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="@color/background"
+        android:gravity="center_vertical"
+        android:paddingLeft="15dp"
+        android:text="班次"
+        android:textSize="20sp" />
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_weight="4"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/txt_item_worktime"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_weight="3"
-            android:gravity="left|center_vertical"
-            android:paddingLeft="20dp"
-            android:text="7:00-17:00"
-            android:textColor="@android:color/black"
-            android:textSize="25sp" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_weight="4"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txt_item_worktime"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_weight="3"
+                android:gravity="left|center_vertical"
+                android:paddingLeft="20dp"
+                android:text="7:00-17:00"
+                android:textColor="@android:color/black"
+                android:textSize="25sp" />
 
 
-        <TextView
-            android:id="@+id/txt_item_workday"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_weight="3"
-            android:gravity="left|center_vertical"
-            android:paddingLeft="20dp"
-            android:text="周一 二 三 四 五"
-            android:textSize="16sp" />
+            <TextView
+                android:id="@+id/txt_item_workday"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_weight="3"
+                android:gravity="left|center_vertical"
+                android:paddingLeft="20dp"
+                android:text="周一 二 三 四 五"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+        <CheckBox
+            android:id="@+id/cb_timeon_worktime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:button="@null"
+            android:drawableTop="@drawable/timeon_selecter"
+            android:paddingRight="10dp" />
+
 
     </LinearLayout>
-
-
-    <Switch
-        android:id="@+id/switch1"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:paddingRight="20dp"
-        android:textOff="关"
-        android:textOn="开" />
-
-
 </LinearLayout>
