--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="background">#efefef</color>
     <color name="line">#cbcbcb</color>
     <color name="orange">#f7ac47</color>
+    <color name="translucent_background">#ffffff</color>
 </resources>
