位置上传时间及定位模式修改，修改接单逻辑，不自动获取，是时刷新列表；

--- a/app/src/main/res/layout/fragment_index.xml
+++ b/app/src/main/res/layout/fragment_index.xml
@@ -92,14 +92,14 @@
             android:id="@+id/of"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:background="@drawable/oval_on"
+            android:background="@drawable/oval_off"
             android:gravity="center">
 
             <TextView
                 android:id="@+id/online"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="上线"
+                android:text="下线"
                 android:textColor="@android:color/white"
                 android:textSize="20sp" />
         </LinearLayout>
