--- a/app/src/main/res/layout/activity_dialog.xml
+++ b/app/src/main/res/layout/activity_dialog.xml
@@ -99,7 +99,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="倒计时："
-                    android:textColor="@android:color/darker_gray"
+                    android:textColor="@android:color/holo_red_light"
                     android:textSize="16sp" />
 
                 <TextView
