--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -16,10 +16,11 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/layoutOfOrderAndGoods"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/white"
@@ -86,6 +87,16 @@
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/txt_note"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="7dp"
+                    android:paddingLeft="20dp"
+                    android:text="备注："
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+
+                <TextView
                     android:id="@+id/address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -95,20 +106,15 @@
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
 
-                <View
+                <TextView
+                    android:id="@+id/txt_orderStatus_detail"
                     android:layout_width="match_parent"
-                    android:layout_height="0.1dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="20dp"
-                    android:background="@color/line" />
-
-                <com.amap.api.maps.MapView
-                    android:id="@+id/mapView"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="7dp"
+                    android:paddingLeft="20dp"
+                    android:text="订单状态："
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
 
                 <View
                     android:layout_width="match_parent"
@@ -116,42 +122,56 @@
                     android:layout_marginTop="5dp"
                     android:background="@color/line" />
             </LinearLayout>
+
+            <com.amap.api.maps.MapView
+                android:id="@+id/mapView"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/line" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:id="@+id/isClickable"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/customerReject"
+                        android:layout_width="0dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="bottom"
+                        android:layout_weight="1"
+                        android:background="@android:color/white"
+                        android:text="拒收"
+                        android:textColor="@android:color/black"
+                        android:textSize="20sp" />
+
+                    <Button
+                        android:id="@+id/dispatchingDone"
+                        android:layout_width="0dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="bottom"
+                        android:layout_weight="2    "
+                        android:background="@color/orange"
+                        android:text="完成配送"
+                        android:textColor="@android:color/white"
+                        android:textSize="20sp" />
+                </LinearLayout>
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:id="@+id/isClickable"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/customerReject"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_gravity="bottom"
-                android:layout_weight="1"
-                android:background="@android:color/white"
-                android:text="拒收"
-                android:textColor="@android:color/black"
-                android:textSize="20sp" />
-
-            <Button
-                android:id="@+id/dispatchingDone"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_gravity="bottom"
-                android:layout_weight="2    "
-                android:background="@color/orange"
-                android:text="完成配送"
-                android:textColor="@android:color/white"
-                android:textSize="20sp" />
-        </LinearLayout>
-    </LinearLayout>
 
 </LinearLayout>
