--- a/app/src/main/res/layout/item_pay_list.xml
+++ b/app/src/main/res/layout/item_pay_list.xml
@@ -2,75 +2,67 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:orientation="vertical">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/txt_adress_show"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@android:color/white">
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:src="@drawable/message" />
-
-
-        <TextView
-            android:id="@+id/messageHead"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="3"
-            android:gravity="left|center_vertical"
-            android:singleLine="true"
-            android:text=""
-            android:textSize="14sp" />
-
-
-        <TextView
-            android:id="@+id/time"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="3"
-            android:gravity="center_vertical|right"
-            android:paddingRight="10dp"
-            android:singleLine="true"
-            android:text=""
-            android:textSize="14sp" />
-
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:src="@drawable/delete"
-            android:visibility="gone" />
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:text="山大北路56号，金泰花园1楼"
+        android:textColor="#000000"
+        android:textSize="18sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@android:color/white">
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center"
-            android:layout_weight="1" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/content"
+            android:id="@+id/txt_phone_show"
             android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight="7"
-            android:lines="2"
-            android:text=""
-            android:textSize="16sp" />
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="15947001565"
+            android:textSize="14sp" />
 
+        <TextView
+            android:id="@+id/txt_name_show"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:text="张三"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/txt_shipStatus_show"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:text="已拒单"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/txt_paytype_show"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.6"
+            android:gravity="center"
+            android:text="现金："
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/txt_amount_show"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:text="¥46.00"
+            android:textColor="#fe0303"
+            android:textSize="14sp" />
     </LinearLayout>
 </LinearLayout>
