--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="line">#cbcbcb</color>
     <color name="orange">#f7ac47</color>
     <color name="translucent_background">#ffffff</color>
+    <color name="txtcolornoclick">#888888</color>
+    <color name="offrightblue">#5d72e9</color>
 </resources>
